# vantage

./: .conflict-files  .gitignore  .rules  1-dataset.html  10-references.html  11-subquery-expressions.html  1a-table.html  1b-table-columns.html  2-expressions-and-queries.html  3-expressions-in-table.html  404.html  6-joins.html  7-fetching-data.html  8-struct-entities.html  9-associated-entities.html  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  FINAL_TODO.md  JAVA_INTERVIEW.md  LEVEL2_TABLE_TYPES.md  NEW_PERSISTENCE_GUIDE.md  PLAN_0_5.md  POSTGRES_NOTES.md  README.md  TODO.md  augmentation.html  config-driven-vistas.html  expressions.html  history.html  history.txt  index.html  introduction.html  jupyter_roadmap.md  lib.rs  mda.html  mise.toml  new-persistence.html  print.html  record-lifecycle.html  (+48 more)
bakery_api/: Cargo.toml
bakery_api/src/: products.rs
bakery_model/: Cargo.toml  schema-pg.sql
bakery_model/examples/: 0-intro.rs  1-soft-delete.rs  3-query-builder.rs  3b-query-builder.rs  4-calendar-scheduler.rs  5-csv.rs
bakery_model/src/: lib.rs  lineitem.rs  order.rs
bakery_model/tests/: bakery_integration_test.rs
bakery_model3/: CHANGELOG.md  CLI_WALKTHROUGH.md  Cargo.toml  README.md
bakery_model3/data/: client.csv  order.csv
bakery_model3/examples/: 0-intro.rs  cli-vista.rs  cli.rs  contained-surreal.rs  dynamo-smoke.rs  implicit-references.rs
bakery_model3/src/: animal.rs  bakery.rs  client.rs  lib.rs  order.rs  product.rs
bakery_model4/: Cargo.toml  config.yaml
bakery_model4/examples/: cli4.rs
bakery_model4/src/: lib.rs
bakery_model4/vistas/: bakery.yaml  client.yaml  order.yaml  product.yaml
docs4/: Cargo.toml  book.toml
docs4/src/: SUMMARY.md  augmentation.md  config-driven-vistas.md  expressions.md  history.md  introduction.md  lib.rs  mda.md  new-persistence.md  record-lifecycle.md  relations.md  sql.md  surrealdb.md  three-paths.md  type-system.md  whats-new-04.md  whats-new-in-05.md
docs4/src/intro/: fork.md  step1-first-query.md  step10-any-table.md  step11-model-crate.md  step12-entities.md  step13-dataset-traits.md  step2-conditions.md  step2-tables.md  step3-axum-server.md  step3-tables.md  step4-reading-data.md  step4-vista.md  step5-dio-lens.md  step5-sql-dio.md  step6-augmentation.md  step6-sql-watch.md  step7-computed-fields.md  step7-scenery.md  step7-sql-postgres.md  step8-axum-dio.md  step8-dataset-conditions.md  step8-sql-notify.md  step9-multiple-backends.md  step9-surreal.md
docs4/src/new-persistence/: step1-types.md  step2-expressions.md  step2b-operators.md  step3-operators.md  step4-query-builder.md  step4-table-crud.md  step5-table-crud.md  step6-relationships.md  step7-multi-backend.md  step8-vista-integration.md  step8-vista.md  step9-contained-relations.md
docs4/src/relations/: dio.md  expressions.md  implicit-references.md  traversal.md  vistas.md
docs4/src/sql/: primitives.md
docs4/src/surrealdb/: primitives.md
docs4/src/type-system/: custom-types.md
example_cursive/: Cargo.toml  README.md
example_cursive/src/: main.rs
example_egui/: Cargo.toml  README.md
example_egui/src/: main.rs
example_for_website/: Cargo.toml
example_for_website/examples/: agnostic_jsonl_exporter.rs
example_gpui/: Cargo.toml  README.md
example_gpui/src/: main.rs
example_python/: Cargo.toml  README.md  pyproject.toml
example_python/src/: lib.rs
example_slint/: Cargo.toml  README.md
example_slint/src/: main.rs
example_slint/ui/: main.slint
example_tui/: Cargo.toml  README.md
example_tui/src/: main.rs
learn-1/: Cargo.toml  products.db  seed.sql
learn-1/src/: main.rs
learn-10/: Cargo.toml
learn-10/frontend/: index.html
learn-10/src/: db.rs  lib.rs  main.rs  notify.rs  product.rs
learn-11/: Cargo.toml
learn-11/frontend/: index.html
learn-11/src/: db.rs  lib.rs  main.rs  product.rs
learn-3/: Cargo.toml  products.db
learn-3/src/: category.rs  db.rs  main.rs  product.rs  vantage_axum.rs
learn-4/: Cargo.toml
learn-4/src/: files.rs  main.rs
learn-6/: Cargo.toml
learn-6/src/: files.rs  main.rs  readings.rs
learn-7/: .gitignore  Cargo.toml
learn-7/frontend/: index.html  package-lock.json  package.json  vite.config.js
learn-7/frontend/src/: App.jsx
learn-7/src/: contents.rs  main.rs  readings.rs
learn-8/: .gitignore  Cargo.toml
learn-8/src/: main.rs  product.rs  sim.rs
learn-9/: Cargo.toml
learn-9/src/: db.rs  main.rs  product.rs  sim.rs
surreal-client/: CHANGELOG.md  Cargo.toml  README.md
surreal-client/examples/: cloud_token.rs
surreal-client/src/: cbor_convert.rs  client.rs  connection.rs  engine.rs  error.rs  lib.rs  live.rs  params.rs  pool.rs  record.rs  types.rs
surreal-client/tests/: integration_cbor_types.rs  live_query.rs  surrealdb.rs
vantage-admin/: .gitmodules  Cargo.toml
vantage-admin/data/: batch.yaml
vantage-admin/src/: app.rs  assets.rs  main.rs  vantage.rs
vantage-api-adapters/: CHANGELOG.md  Cargo.toml
vantage-api-adapters/src/: axum_dio.rs  lib.rs
vantage-api-adapters/tests/: axum_dio.rs
vantage-api-client/: CHANGELOG.md  Cargo.toml  README.md  TODO.md
vantage-api-client/examples/: cities.rs  graphql_spacex.rs  jsonplaceholder.rs  jsonplaceholder_yaml.rs
vantage-api-client/src/: api.rs  lib.rs  operation.rs  prelude.rs  table_source.rs
vantage-api-client/tests/: any_table.rs  builder.rs  yaml_factory.rs
vantage-api-pool/: CHANGELOG.md  Cargo.toml  README.md
vantage-api-pool/examples/: pool_cities.rs
vantage-api-pool/src/: aww_pool.rs  lib.rs  pool_api.rs
vantage-api-pool/tests/: resilient.rs
vantage-aws/: CHANGELOG.md  Cargo.toml  README-DYNAMODB.md  README.md  TODO.md
vantage-aws-models/: Cargo.toml
vantage-aws-models/examples/: aws-cli.rs
vantage-aws-models/src/: lib.rs  log_event.rs  log_group.rs
vantage-aws/examples/: aws-cli.rs  aws-dynamo.rs  control-api.rs  dynamo-single-table.rs
vantage-aws/scripts/: ingress.sh  start.sh  stop.sh
vantage-aws/src/: account.rs  condition.rs  dispatch.rs  lib.rs  operation.rs  sign.rs  transport.rs
vantage-aws/tests/: dynamodb_live.rs  sign.rs  vista.rs
(+1975 files in other folders)
