[workspace]
members = [
    "vantage-core",
    "vantage-expressions",
    "vantage-redb",
    "surreal-client",
    "vantage-dataset",
    "vantage-table",
    "vantage-csv",
    "cbor-test",
    "vantage-types", "learn-1", "learn-2", "learn-3",
    "vantage-vista",
    "vantage-diorama",
    "vantage-log-writer",
    "vantage-sql",
    "vantage-surrealdb",
    "vantage-mongodb",
    "vantage-api-client",
    "vantage-api-pool",
    "vantage-cli-util",
    "bakery_model3",
    "bakery_model4",
    "docs4",
]
exclude = [
    "vantage",
    "vantage-aws",
    "bakery_model",
    "bakery_api",
    "example_*",
    "vantage-ui-adapters",
    "test-api-server",
    # vantage-config uses pre-refactor vantage-surrealdb / vantage-table
    # APIs (SurrealColumn at root, Table/EmptyEntity at the vantage-table
    # root). Unrelated to vista; needs its own porting pass.
    "vantage-config",
]
resolver = "2"
