[workspace]
members = [
    "vantage-core",
    "vantage-expressions",
    "vantage-redb",
    "surreal-client",
    "vantage-dataset",
    "vantage-table",
    "vantage-csv",
    "vantage-types", "learn-1", "learn-2", "learn-3",
    "vantage-vista",
    "vantage-diorama",
    "vantage-log-writer",
    "vantage-sql",
    "vantage-surrealdb",
    "vantage-mongodb",
    "vantage-api-client",
    "vantage-api-pool",
    "vantage-cli-util",
    "bakery_model3",
    "bakery_model4",
    "docs4",
]
exclude = [
    "vantage-aws",
    "example_*",
    "vantage-ui-adapters",
    "test-api-server",
]
resolver = "2"
