[workspace]
members = [
    "vantage-core",
    "vantage-expressions",
    "vantage-redb",
    "surreal-client",
    "vantage-dataset",
    "vantage-table",
    "vantage-csv",
    "vantage-types", "learn-1", "learn-2", "learn-3",
    "vantage-vista",
    "vantage-vista-factory",
    "vantage-diorama",
    "vantage-log-writer",
    "vantage-sql",
    "vantage-surrealdb",
    "vantage-mongodb",
    "vantage-api-client",
    "vantage-api-pool",
    "vantage-cli-util",
    "bakery_model3",
    "bakery_model4",
    "docs4",
]
exclude = [
    "learn-ds",
    "learn-qw",
    "learn-qw7",
    "vantage-aws",
    "vantage-kubernetes",
    "vantage-aggregate",
    "vantage-aggregate-qw",
    "example_*",
    "vantage-ui-adapters",
    "test-api-server",
    "vantage-cmd",
]
resolver = "2"
