[package]
name = "bakery_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
bakery_model = { path = "../bakery_model" }
vantage = { path = "../vantage" }
clap = { version = "4.5.46", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
fake = "4.4.0"
http-body-util = "0.1.3"
hyper = "1.7.0"
hyper-util = { version = "0.1.16", features = ["http1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }

tower-test = "0.4.0"
tracing-subscriber = "0.3.20"
