[package]
name = "bakery_model"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.100"
vantage = { path = "../vantage" }
vantage-sql = { path = "../vantage-sql" }
vantage-expressions = { path = "../vantage-expressions" }
pretty_assertions = "1.4.1"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
testcontainers-modules = { version = "0.13.0", features = [
    "postgres",
    "blocking",
] }
tokio = "1.47.1"
tokio-postgres = "0.7.13"
sqlformat = "0.4.0"
sqlx = { version = "0.8.6", default-features = false, features = [
    "json",
    "postgres",
    "runtime-tokio",
] }

[[example]]
name = "0-intro"
path = "examples/0-intro.rs"
