[package]
name = "bakery_model3"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
vantage-core = { path = "../vantage-core" }
vantage-table = { path = "../vantage-table" }
vantage-csv = { path = "../vantage-csv", features = ["vista"] }
vantage-vista = { path = "../vantage-vista" }
vantage-expressions = { path = "../vantage-expressions" }
vantage-dataset = { path = "../vantage-dataset" }
vantage-types = { path = "../vantage-types" }
vantage-sql = { path = "../vantage-sql", features = ["sqlite", "postgres", "vista"] }
vantage-mongodb = { path = "../vantage-mongodb", features = ["vista"] }
vantage-aws = { path = "../vantage-aws" }
vantage-surrealdb = { path = "../vantage-surrealdb", features = ["vista"] }
surreal-client = { path = "../surreal-client", features = ["decimal"] }
bson = "2"
serde_json = "1"
indexmap = "2.14"
tokio = { version = "1.52", features = ["full"] }
clap = "4.6"

[dev-dependencies]
vantage-cli-util = { path = "../vantage-cli-util" }
serde_json = "1"
ciborium = { version = "0.2", features = ["std"] }
