[package]
name = "bakery_model4"
version = "0.1.0"
edition = "2024"

[dependencies]
vantage-core = { path = "../vantage-core" }
vantage-types = { path = "../vantage-types" }
vantage-table = { path = "../vantage-table" }
vantage-dataset = { path = "../vantage-dataset" }
vantage-vista = { path = "../vantage-vista" }
vantage-sql = { path = "../vantage-sql", features = ["sqlite", "vista"] }
serde_json = "1"
tokio = { version = "1.48", features = ["full"] }
clap = "4.5"

[dev-dependencies]
vantage-cli-util = { path = "../vantage-cli-util" }
ciborium = { version = "0.2", features = ["std"] }
