[package]
name = "vantage-docs"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
vantage-sql = { path = "../vantage-sql", features = ["sqlite", "postgres"] }
vantage-mongodb = { path = "../vantage-mongodb" }
vantage-expressions = { path = "../vantage-expressions" }
vantage-table = { path = "../vantage-table" }
vantage-types = { path = "../vantage-types" }
