[package]
name = "example_egui"
version = "0.4.0"
edition = "2021"

[workspace]

[dependencies]
eframe = "0.33"
egui = "0.33"
dataset-ui-adapters = { path = "../vantage-ui-adapters", features = ["egui"] }
bakery_model3 = { path = "../bakery_model3" }
vantage-table = { path = "../vantage-table" }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
