[workspace]

[package]
name = "example_for_website"
version = "0.1.0"
edition = "2021"

[features]
surreal = ["dep:surreal-client", "dep:vantage-surrealdb", "dep:vantage-table"]
postgres = []
api = []

[[example]]
name = "agnostic_jsonl_exporter"
path = "examples/agnostic_jsonl_exporter.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
indexmap = "2"
async-trait = "0.1"
csv = "1.4"
vantage-core = { path = "../vantage-core" }
vantage-types = { path = "../vantage-types", features = ["serde"] }
vantage-dataset = { path = "../vantage-dataset" }

surreal-client = { path = "../surreal-client", optional = true }
vantage-surrealdb = { path = "../vantage-surrealdb", optional = true }
vantage-table = { path = "../vantage-table", optional = true }
