[package]
name = "example_gpui"
version = "0.1.0"
edition = "2021"

[workspace]


[dependencies]
dataset-ui-adapters = { path = "../vantage-ui-adapters", features = ["gpui"] }
gpui = { git = "https://github.com/zed-industries/zed.git" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
