[package]
name = "example_gpui"
version = "0.4.0"
edition = "2021"

[workspace]

[dependencies]
dataset-ui-adapters = { path = "../vantage-ui-adapters", features = ["gpui"] }
bakery_model3 = { path = "../bakery_model3" }
vantage-table = { path = "../vantage-table" }
gpui = { git = "https://github.com/zed-industries/zed.git" }
gpui_platform = { git = "https://github.com/zed-industries/zed.git" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
