[package]
name = "example_python"
version = "0.4.0"
edition = "2021"

[workspace]

[lib]
name = "example_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }

bakery_model3 = { path = "../bakery_model3" }
vantage-table = { path = "../vantage-table" }
vantage-dataset = { path = "../vantage-dataset" }

[build-dependencies]
pyo3-build-config = "0.28"
