[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "example_python"
description = "Python bindings for Vantage Table framework - Bakery example"
authors = [{name = "Vantage Team"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
keywords = ["database", "orm", "table", "vantage"]
dependencies = []

[tool.maturin]
python-source = "python"
module-name = "example_python"

[tool.pytest.ini_options]
testpaths = ["tests", "python
