[package]
name = "example_slint"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
slint = "1.8"
dataset-ui-adapters = { path = "../vantage-ui-adapters", features = ["slint"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
slint-build = "1.8"
