[package]
name = "example_slint"
version = "0.4.0"
edition = "2021"

[workspace]

[dependencies]
slint = "1.16"
dataset-ui-adapters = { path = "../vantage-ui-adapters", features = ["slint"] }
bakery_model3 = { path = "../bakery_model3" }
vantage-table = { path = "../vantage-table" }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
anyhow = "1"

[build-dependencies]
slint-build = "1.16"
