[package]
name = "example_tui"
version = "0.1.0"
edition = "2021"

[workspace]


[dependencies]
dataset-ui-adapters = { path = "../vantage-ui-adapters", features = [
    "ratatui",
] }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
color-eyre = "0.6"
