[package]
name = "example_tui"
version = "0.4.0"
edition = "2021"

[workspace]


[dependencies]
dataset-ui-adapters = { path = "../vantage-ui-adapters", features = [
    "ratatui",
] }
bakery_model3 = { path = "../bakery_model3" }
vantage-table = { path = "../vantage-table" }
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
color-eyre = "0.6"
anyhow = "1.0"
