[package]
name = "learn-1"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
vantage-expressions = { path = "../vantage-expressions" }
vantage-sql = { version = "0.5", path = "../vantage-sql", features = ["sqlite"] }
vantage-types = { path = "../vantage-types", features = ["serde"] }
