[package]
name = "learn-11"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "learn-11"

[dependencies]
vantage-api-adapters = { path = "../vantage-api-adapters", features = ["axum"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
vantage-surrealdb = { path = "../vantage-surrealdb", features = ["vista"] }
surreal-client = { path = "../surreal-client" }
vantage-diorama = { path = "../vantage-diorama" }
vantage-vista = { path = "../vantage-vista" }
vantage-dataset = { path = "../vantage-dataset" }
vantage-table = { path = "../vantage-table" }
vantage-types = { path = "../vantage-types" }
vantage-core = { path = "../vantage-core" }
rand = "0.8"
