[package]
name = "learn-3"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.51.1", features = ["full"] }
vantage-core = { path = "../vantage-core" }
vantage-expressions = { path = "../vantage-expressions" }
vantage-dataset = { path = "../vantage-dataset" }
vantage-mongodb = { path = "../vantage-mongodb" }
vantage-table = { path = "../vantage-table" }
vantage-types = { path = "../vantage-types", features = ["serde"] }
axum = "0.8.9"
