[package]
name = "learn-6"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
dataset-ui-adapters = { path = "../vantage-ui-adapters", features = ["ratatui"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
vantage-aws = { path = "../vantage-aws" }
vantage-diorama = { path = "../vantage-diorama" }
vantage-vista = { path = "../vantage-vista" }
