[package]
name = "learn-7"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
vantage-api-adapters = { path = "../vantage-api-adapters", features = ["axum"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
vantage-aws = { path = "../vantage-aws" }
vantage-diorama = { path = "../vantage-diorama" }
vantage-vista = { path = "../vantage-vista" }
