[package]
name = "learn-8"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
vantage-api-adapters = { path = "../vantage-api-adapters", features = ["axum"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
vantage-sql = { path = "../vantage-sql", features = ["sqlite", "vista"] }
vantage-diorama = { path = "../vantage-diorama" }
vantage-types = { path = "../vantage-types" }
vantage-core = { path = "../vantage-core" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
