
[package]
name = "surreal-client"
version = "0.1.0"
edition = "2024"

[features]
pool = ["mobc"]
decimal = ["rust_decimal"]

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.31"
mobc = { version = "0.9", optional = true }
reqwest = "0.12.23"
rust_decimal = { version = "1.36", optional = true }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
futures = "0.3.31"
url = "2.5.7"
