
[package]
name = "surreal-client"
version = "0.1.0"
edition = "2024"

[features]
pool = ["mobc"]
decimal = ["rust_decimal"]

[dependencies]
async-trait = "0.1.89"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
futures-util = "0.3.31"
hex = "0.4"
mobc = { version = "0.9", optional = true }
reqwest = "0.12.24"
rust_decimal = { version = "1.39", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.27.0"
futures = "0.3.31"
url = "2.5.7"
uuid = { version = "1.0", features = ["v4"] }
vantage-types = { path = "../vantage-types" }
paste = "1.0"
indexmap = "2.0"
