[package]
name = "vantage-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rust-embed = "8"

surreal-client = { path = "../surreal-client" }
vantage-surrealdb = { path = "../vantage-surrealdb" }
vantage-expressions = { path = "../vantage-expressions" }
