[package]
name = "vantage-api-adapters"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Web-framework adapters that expose Vantage Dio/Scenery over HTTP"
repository = "https://github.com/romaninsh/vantage"
publish = false

[lib]
doctest = false

[dependencies]
vantage-core = { version = "0.6", path = "../vantage-core" }
vantage-types = { version = "0.6", path = "../vantage-types" }
vantage-diorama = { version = "0.6", path = "../vantage-diorama" }
vantage-dataset = { version = "0.6", path = "../vantage-dataset" }

ciborium = { version = "0.2", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "time"] }
tracing = "0.1"

axum = { version = "0.8", optional = true }
async-stream = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }

[features]
axum = ["dep:axum", "dep:async-stream", "dep:futures-util"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
async-trait = "0.1"
indexmap = "2"
vantage-vista = { path = "../vantage-vista" }
vantage-vista-factory = { path = "../vantage-vista-factory" }
