[package]
edition = "2024"
name = "vantage-api-client"
version = "0.1.2"
license = "MIT OR Apache-2.0"
authors = ["Romans Malinovskis <me@nearly.guru>"]
description = "Vantage extension for REST API backends"

[dependencies]
async-trait = "0.1"
indexmap = { version = "2", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
urlencoding = "2.1"
vantage-core = { version = "0.4", path = "../vantage-core" }
vantage-dataset = { version = "0.4.1", path = "../vantage-dataset" }
vantage-expressions = { version = "0.4", path = "../vantage-expressions" }
vantage-table = { version = "0.4.2", path = "../vantage-table" }
vantage-types = { version = "0.4", path = "../vantage-types", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
vantage-cli-util = { path = "../vantage-cli-util" }
