[package]
name = "vantage-aws-models"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Romans Malinovskis <me@nearly.guru>"]
description = "AWS resource models built on vantage-aws — proof of concept"
publish = false

[dependencies]
vantage-aws = { path = "../vantage-aws" }
vantage-table = { version = "0.4.6", path = "../vantage-table" }
vantage-types = { version = "0.4", path = "../vantage-types", features = ["serde"] }

serde = { version = "1", features = ["derive"] }

[dev-dependencies]
vantage-core = { version = "0.4", path = "../vantage-core" }
vantage-dataset = { version = "0.4", path = "../vantage-dataset" }
vantage-cli-util = { version = "0.4", path = "../vantage-cli-util" }

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[[example]]
name = "aws-cli"
path = "examples/aws-cli.rs"
