[package]
name = "vantage-aws"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Romans Malinovskis <me@nearly.guru>"]
description = "AWS API persistence backend for Vantage framework — incubating"
documentation = "https://docs.rs/vantage-aws"
homepage = "https://romaninsh.github.io/vantage"
repository = "https://github.com/romaninsh/vantage"
readme = "../README.md"
publish = false

[dependencies]
vantage-core = { version = "0.4", path = "../vantage-core" }
vantage-types = { version = "0.4", path = "../vantage-types", features = ["serde"] }
vantage-expressions = { version = "0.4", path = "../vantage-expressions" }
vantage-table = { version = "0.4.6", path = "../vantage-table" }
vantage-dataset = { version = "0.4", path = "../vantage-dataset" }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros", "sync"] }

# SigV4: hand-rolled. Just the primitives.
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# AnyTable / with_foreign interop — JSON ↔ CBOR via ciborium's serde bridge.
ciborium = "0.2"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
